src/app/cards/components/card-preview/card-preview.component.scss
.card {
  background-color: var(--white);
  width: 100%;
  height: 100%;
  border-radius: var(--border-radius);
  position: relative;

  &.not-owned {
    img {
      opacity: 0.5;
    }
  }

  img {
    width: 100%;
    height: 100%;
    border-radius: var(--border-radius);
    // Standard card dimensions
    aspect-ratio: 210/297;
  }

  .card-overlay {
    position: absolute;
    bottom: 0;
    right: 0;
    left: 0;
    padding: 1.5rem 0.5rem 0.5rem 0.5rem;;
    z-index: 1;
    display: flex;
    flex-direction: column;
    align-items: center;
    gap: 0.5rem;
    background: rgb(0,0,0);
    background: -moz-linear-gradient(180deg, rgba(0,0,0,0) 0%, rgba(0,0,0,0.8) 30%, rgba(0,0,0,1) 90%);
    background: -webkit-linear-gradient(180deg, rgba(0,0,0,0) 0%, rgba(0,0,0,0.8) 30%, rgba(0,0,0,1) 90%);
    background: linear-gradient(180deg, rgba(0,0,0,0) 0%, rgba(0,0,0,0.8) 30%, rgba(0,0,0,1) 90%);
    color: var(--white);
    border-radius: 0 0 var(--border-radius) var(--border-radius);

    .card-key,
    .card-name {
      text-align: center;
    }

    .card-key {
      font-size: 0.8rem;
    }

    .card-actions {
      display: flex;
      gap: 0.5rem;
    }
  }
}

